<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.fiskus.asteroidradarapp.ui.asteroid_list.AsteroidListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/daysFilterCGHSV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:internetStatusLayout="@{viewmodel.repo.asteroidsStatus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="0dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/daysFilterCG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_margin"
                app:chipSpacing="@dimen/line_margin"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterTodayChip"
                    style="@style/StyleChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tag="1"
                    android:text="@string/filter_today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterThreeDaysChip"
                    style="@style/StyleChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tag="3"
                    android:text="@string/filter_three_days" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterFiveDaysChip"
                    style="@style/StyleChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:tag="5"
                    android:text="@string/filter_five_days" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/filterSevenDaysChip"
                    style="@style/StyleChip"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:tag="7"
                    android:text="@string/filter_seven_days" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/asteroidRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="@dimen/normal_margin"
            android:paddingEnd="@dimen/normal_margin"
            app:asteroidListData="@{viewmodel.filteredAsteroidsList}"
            app:internetStatusLayout="@{viewmodel.repo.asteroidsStatus}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daysFilterCGHSV">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/errorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/internet_error"
            app:internetStatusErrorText="@{viewmodel.repo.asteroidsStatus}"
            app:layout_constraintBottom_toTopOf="@+id/errorImageBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/errorImageBtn"
            style="@style/StyleInternetStatusImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:indeterminate="true"
            android:onClick="@{()->viewmodel.reloadData()}"
            android:visibility="invisible"
            app:internetStatusErrorImage="@{viewmodel.repo.asteroidsStatus}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_broken_image"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            app:internetStatusPB="@{viewmodel.repo.asteroidsStatus}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
